# uniffi-bindings-template

./: .gitignore  Cargo.toml  README.md  build-local-swift.sh
.github/workflows/: publish-spm.yaml
calculator-android/: build.gradle.kts  justfile  settings.gradle.kts
calculator-android/lib/: build.gradle.kts
calculator-android/lib/src/main/: AndroidManifest.xml
calculator-android/plugins/: build.gradle.kts
calculator-android/plugins/src/main/kotlin/org/rustylibs/plugins/: UniFfiAndroidPlugin.kt
calculator-android/scripts/: build-macos-aarch64-only.sh
calculator-ffi/: Cargo.toml  build.rs  uniffi.toml
calculator-ffi/ffi-bindgen/src/: main.rs
calculator-ffi/src/: calculator.udl  lib.rs
calculator-jvm/: .gitignore  build.gradle.kts  settings.gradle.kts
calculator-jvm/lib/: build.gradle.kts
calculator-jvm/lib/src/test/kotlin/org/rustylibs/calculator/: CalculatorTest.kt
calculator-jvm/plugins/: build.gradle.kts  settings.gradle.kts
calculator-jvm/plugins/src/main/kotlin/org/rustylibs/plugins/: Enums.kt  UniFfiJvmPlugin.kt
calculator-swift/: Package.swift  Package.swift.txt  README.md  build-local-swift.sh  build-xcframework.sh
calculator-swift/Tests/CalculatorTests/: CalculatorTests.swift
calculator-swift/calculatorFFI.xcframework/: Info.plist
calculator-swift/calculatorFFI.xcframework/ios-arm64/calculatorFFI.framework/Modules/: module.modulemap
calculator-swift/calculatorFFI.xcframework/macos-arm64_x86_64/calculatorFFI.framework/Headers/: calculatorFFI-umbrella.h
example-apps/android/: settings.gradle.kts
example-apps/android/app/: build.gradle.kts
example-apps/android/app/src/androidTest/java/org/rustyapps/calculator/: ExampleInstrumentedTest.kt
example-apps/android/app/src/main/: AndroidManifest.xml
example-apps/android/app/src/main/java/org/rustyapps/calculator/: MainActivity.kt
example-apps/android/app/src/main/java/org/rustyapps/calculator/ui/theme/: Color.kt  Theme.kt  Type.kt
example-apps/android/app/src/main/res/values/: themes.xml
example-apps/android/app/src/test/java/org/rustyapps/calculator/: ExampleUnitTest.kt
example-apps/android/gradle/: libs.versions.toml
example-apps/android/gradle/wrapper/: gradle-wrapper.properties
example-apps/ios/: README.md
example-apps/ios/CalculatorFFIExample-iOS/CalculatorFFIExample-iOSTests/: CalculatorFFIExample_iOSTests.swift
example-apps/ios/CalculatorFFIExample-iOS/CalculatorFFIExample-iOSUITests/: CalculatorFFIExample_iOSUITests.swift
example-apps/ios/CalculatorFFIExample/CalculatorFFIExample.xcodeproj/: project.pbxproj
example-apps/ios/CalculatorFFIExample/CalculatorFFIExampleUITests/: CalculatorFFIExampleUITests.swift
example-apps/swift/: README.md
example-apps/swift/CalculatorFFIExample-iOS/CalculatorFFIExample-iOS/: CalculatorFFIExample_iOSApp.swift  ContentView.swift
example-apps/swift/CalculatorFFIExample-iOS/CalculatorFFIExample-iOS.xcodeproj/: project.pbxproj
example-apps/swift/CalculatorFFIExample-iOS/CalculatorFFIExample-iOSUITests/: CalculatorFFIExample_iOSUITestsLaunchTests.swift
example-apps/swift/CalculatorFFIExample/CalculatorFFIExample/: CalculatorFFIExampleApp.swift  ContentView.swift
example-apps/swift/CalculatorFFIExample/CalculatorFFIExample.xcodeproj/xcshareddata/xcschemes/: CalculatorFFIExample.xcscheme
example-apps/swift/CalculatorFFIExample/CalculatorFFIExampleTests/: CalculatorFFIExampleTests.swift
example-apps/swift/CalculatorFFIExample/CalculatorFFIExampleUITests/: CalculatorFFIExampleUITestsLaunchTests.swift
fedimint-android/: build.gradle.kts  settings.gradle.kts
fedimint-android/lib/: build.gradle.kts
fedimint-android/lib/src/main/: AndroidManifest.xml
fedimint-android/plugins/: build.gradle.kts
fedimint-android/plugins/src/main/kotlin/org/fedimint/plugins/: Enums.kt  UniFfiAndroidPlugin.kt
fedimint-ffi/: Cargo.toml  build.rs  uniffi.toml
fedimint-ffi/ffi-bindgen/src/: main.rs
fedimint-ffi/src/: fedimint.udl  lib.rs
ffi-bindgen/: Cargo.toml
ffi-bindgen/src/: main.rs
