[workspace]
members = ["calculator-ffi", "ffi-bindgen"]
default-members = ["calculator-ffi", "ffi-bindgen"]
exclude = ["calculator-android", "calculator-swift", "example-apps"]

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
