[package]
name = "calculator-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "calculatorffi"

[dependencies]
uniffi_macros = { version = "0.21.0", features = ["builtin-bindgen"] }
uniffi = { version = "0.21.0", features = ["builtin-bindgen"] }
rand = "0.8.4"

[build-dependencies]
uniffi_build = { version = "0.21.0", features = ["builtin-bindgen"] }
